[Overview] Prevent menu from overlapping the heading on smaller screens

--- a/apps/marketplace/components/BuyerBriefFlow/Overview.scss
+++ b/apps/marketplace/components/BuyerBriefFlow/Overview.scss
@@ -74,3 +74,9 @@ div.stageStatus {
   float: right;
   font-size: 1rem;
 }
+
+@media (max-width: 450px) {
+  div.headerMenu {
+    position: relative;
+  }
+}
